add CIRCA as Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Spin"]
 	path = Spin
 	url = https://github.com/CREW-Brussels/Spin.git
+[submodule "CIRCA"]
+	path = CIRCA
+	url = https://github.com/CREW-Brussels/CIRCAPlayer.git
