--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "CHORUS"]
 	path = CHORUS
 	url = https://github.com/CREW-Brussels/CHORUS.git
-[submodule "Spin"]
+[submodule "SPIN"]
 	path = Spin
 	url = https://github.com/CREW-Brussels/Spin.git
 [submodule "CIRCA"]
